--- a/client/ByteBuoy.Web/index.html
+++ b/client/ByteBuoy.Web/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ByteBuoy - File & Artefact Monitoring</title>
   </head>
